worked on particle effects

--- a/turn-based-rpg/Assembly-CSharp.csproj
+++ b/turn-based-rpg/Assembly-CSharp.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Assets/Scripts/Utility/TimerClass.cs" />
     <Compile Include="Assets/TurnBattleSystem/_/Stuff/Scripts/Shoot_Flash.cs" />
     <Compile Include="Assets/Scripts/Core/BattleOverWindow.cs" />
+    <Compile Include="Assets/Scripts/Core/DestroyGameObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/TurnBattleSystem/_/Stuff/Shaders/VertexLitCG.shader" />
