--- a/turn-based-rpg/Assembly-CSharp.csproj
+++ b/turn-based-rpg/Assembly-CSharp.csproj
@@ -184,6 +184,8 @@
     <Compile Include="Assets/Viking Crew Tools/UI/SpeechBubbleManager/SpeechBubbleTmp.cs" />
     <Compile Include="Assets/Viking Crew Tools/UI/SpeechBubbleManager/SpeechBubbleManager.cs" />
     <Compile Include="Assets/Viking Crew Tools/UI/SpeechBubbleManager/RatioLayoutFitter.cs" />
+    <Compile Include="Assets/Scripts/Core/NPC.cs" />
+    <Compile Include="Assets/Scripts/Core/Camera_Follow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/TurnBattleSystem/_/Stuff/Shaders/VertexLitCG.shader" />
